Address IntelliJ inspection findings across the codebase (#27)
Co-authored-by: Claude Opus 4.7 <noreply@anthropic.com>